[project]
name = "ravens-nest"
version = "0.1.0"
description = "The Raven's Nest — local-first inventory manager backed by an append-only event log"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.117.0",
    "fastapi>=0.115",
    "httpx>=0.28.1",
    "pillow>=12.3.0",
    "python-multipart>=0.0.32",
    "qrcode>=8.2",
    "rapidfuzz>=3.14.5",
    "uvicorn>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ravens_nest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
